# AI-SportsBettor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/common/: __init__.py  logging_config.py  settings.py
src/config/: config.json  odds_config.json  x_config.json
src/ingest_news/: README.md  X_pull.py  __init__.py  rss_pull.py
src/ingest_odds/: __init__.py  fetch_url_to_file.py  pull_once.py  pull_player_props.py
